feat: adicionado rota para buscar user por email
